fixed equation and wording

--- a/paper/SoundTexturesPaper.tex
+++ b/paper/SoundTexturesPaper.tex
@@ -197,23 +197,24 @@ Given a compression scheme, the {\em compression rate} of a file is equal to \[\
 
 \subsection{Sparsity}
 
-How to define sparsity was slightly less clear, since it usually refers to the quantity of zero entries with respect to some basis. To overcome this, we decided to use several natural representations. We looked at sparsity in the time domain with respect to the actual time series of the audio sample. We also looked at the sparsity in the frequency domain under both uniform and log-scale transforms. To be more precise, we took short-term Fourier transforms, constant q transforms, and Mel transforms of the time series (using the implementations in the Python library Librosa\cite{mcfee2015librosa}) and counted the ratio of entries near zero. Due to noise and precision error, we assumed an entry was empty if the magnitude of the value was less than $10^{-5}$. There are also algorithms for extracting low rank matrices assuming one has sampled from noisy data\cite{negahban2011estimation}. We would have liked to have implemented and run one of these algorithms, using the derived rank as a measure of sparsity, but we did not have time to extract this feature.
+How to define sparsity was slightly less clear, since it usually refers to the quantity of zero entries with respect to some basis. To overcome this, we decided to use several natural representations. We looked at sparsity in the time domain with respect to the actual time series of the audio sample. We also looked at the sparsity in the frequency domain under both uniform and log-scale transforms. To be more precise, we took short-term Fourier transforms, constant q transforms, and Mel transforms of the time series (using the implementations in the Python library Librosa\cite{mcfee2015librosa}) and counted the ratio of entries near zero to the total number of entries. Due to noise and precision error, we assumed an entry was empty if the magnitude of the value was less than $10^{-5}$. In the samples we inspected closely this value was sufficiently small that all apparent signals were much larger than this value.
 
-The Short Term Fourier Transform attempts to compute the Discrete Fourier Transform at every point for a changing signal by computing the DFT over a small sliding window. The STFT at a time $n$ with a window size $\omega$ can be expressed as $$STFT(x,\omega) = \Sigma_{m=-\infty}^\infty x[m]w[n-m]e^{-j\omega n}$$ where $x[i]$ and $w[i]$ are points in our signal\cite{STFT}.
+The Short Term Fourier Transform attempts to compute the Discrete Fourier Transform at every point for a changing signal by computing the DFT over a small sliding window. The STFT at a time $n$ with a window size $\omega$ can be expressed as $$STFT \left(x,\omega \right) = \Sigma_{m=-\infty}^\infty x[m]w[n-m]e^{-j\omega n}$$ where $x[i]$ and $w[i]$ are points in our signal\cite{STFT}.
 
 The Constant Q and Mel Transforms are analogs to the Fourier Transform, but end up with a logarithmic spacing in the frequency domain, making them behave more like human auditory signal processing. We refer the reader to Judith Brown's paper\cite{brown1991calculation} for details on the Constant Q Transform and to Saha and Sahidullah's paper\cite{Sahidullah2012543} for details on the Mel Transform, as well as the Librosa source code\footnote{\url{https://github.com/bmcfee/librosa}} for their specific implementation details.
 
-
+Another measure of sparsity is the rank of the matrix needed to fully specify a transform. There are also algorithms for extracting low rank matrices assuming one has sampled from noisy data\cite{negahban2011estimation}. We would have liked to have implemented and run one of these algorithms, using the derived rank as a measure of sparsity, but we did not have time to extract this additional feature.
 
 \subsection{Temporal Homogeneity}
 Temporal homogeneity refers to consistency in the signal over time. Obviously we can't have everything be exactly the same, so one must pick specific features with which to check consistency. A paper on visual textures provides a precise definition\cite{portilla2000parametric}.
 \begin{definition}
 $X$ is homogeneous with respect to the function $\Phi: \mathbb{R}^L \rightarrow \mathbb{R}$ with tolerance $\epsilon$ and probability $p$ if the average of $\Phi$ over a sample $x \in X$ is a good approximation to the average of $\Phi$ over all of $X$ 
-$$P_x(\mathrm{E}(\Phi(x)) - \mathrm{E}(\Phi(X)) < \epsilon) \geq p$$
+$$P_x \left (\mathrm{E} \left(\Phi(x)\right) - \mathrm{E}\left(\Phi(X)\right) < \epsilon \right) \geq p$$
 \end{definition}
 In practice, this definition is slightly cumbersome to use, and requires picking either our probability or threshold arbitrarily. In the same spirit, we instead decide to use the variance of a given statistic over a sample. Thus we calculate a related value we call the temporal inhomogeneity. 
 \begin{definition}
-The inhomogeneity of $X$ with respect to $\Phi$ is $$\Xi(X) = \Sigma_{x\in X} (\Phi(x) - \mathrm{E}(\Phi(X))^2$$
+The inhomogeneity of $X$ with respect to $\Phi$ is 
+$$\Xi\left(X\right) = \Sigma_{x\in X} \left(\Phi(x) - \mathrm{E}\left(\Phi(X)\right)\right)^2$$
 \end{definition}
 We additionally note that the original definition of homogeneity was given with respect to translations over a two dimensional space, whereas we take samples over a single time dimension.
 
@@ -226,7 +227,7 @@ We still haven't fully specified our statistics. We decided to compute the tempo
 
 All of our models were written in Python with the help of a number of external libraries. NumPy\cite{numpy} and Librosa\cite{mcfee2015librosa} were used for audio processing; SciPy\cite{scipy} provided a number of useful statistical methods; and scikit-learn\cite{scikit-learn} was used for our regression and classification.
 
-Our dataset comes from the audio samples used in McDermott and Simoncelli's paper\cite{McDermott2011926} as a basis for their synthetic sounds. The dataset contains 175 sound samples, all 7 seconds long in a .wav format. Of these, 28 were discard due to naming ambiguities which prevented them from being identified with the values in the paper. These samples included many examples of sound textures, such as four different wind samples and multiple different rain samples, as well as some audio files that are obviously not sound textures, such as person speaking English and various rhythmic drumbeats. The spectrograms of several samples can be seen in Figure~\ref{fig:spectrogramCompare} and Figure~\ref{fig:spectrogram} A full list can be found in Appendix~\ref{sec:dataset}. In the prior work, these samples were used to generate synthetic sounds with similar statistical properties and these synthetic sounds. An experiment was run where these synthetic sounds were given realism ratings by people on a scale of 1 to 7. Since \cite{mcdermott2013summary} showed that many sound textures seemed to be well characterized by these same sets of statistics, we use this realism score as a proxy for the `texturality' of the audio samples.
+Our dataset comes from the audio samples used in McDermott and Simoncelli's paper\cite{McDermott2011926} as a basis for their synthetic sounds. The dataset contains 175 sound samples, all 7 seconds long in a .wav format. Of these, 28 were discard due to naming ambiguities which prevented them from being identified with the values in the paper. These samples included many examples of sound textures, such as four different wind samples and multiple different rain samples, as well as some audio files that are obviously not sound textures, such as person speaking English and various rhythmic drumbeats. The spectrograms of several samples can be seen in Figure~\ref{fig:spectrogramCompare} and Figure~\ref{fig:spectrograms} A full list can be found in Appendix~\ref{sec:dataset}. In the prior work, these samples were used to generate synthetic sounds with similar statistical properties and these synthetic sounds. An experiment was run where these synthetic sounds were given realism ratings by people on a scale of 1 to 7. Since \cite{mcdermott2013summary} showed that many sound textures seemed to be well characterized by these same sets of statistics, we use this realism score as a proxy for the `texturality' of the audio samples.
 
   \begin{figure*}[hbt]
     \centering
@@ -339,11 +340,7 @@ When we ran LASSO regressions, we consistently found that two features were of t
 
     Because the degree to  which a sound is a sound texture is not based on how loud it is played, we assume that this is because of an artifact in how the sounds were recorded. Many things  that are clearly sound textures are quite loud (e.g.,  applause) or were likely recorded with a microphone close to the source of the sound (e.g., running water). On the other hand, sounds that are definitely not sound textures, like speech or church  bells, may have been recorded at more of a distance.
 
-\xxx{What correlated and what didn't? What feature (ensemble) lead to a good classifier?}
-
 \section{Conclusion}
-
-\xxx{Speculate if these could be useful features in audio classification. Speculate about the implication to human audition. Give future directions.}
 
 Out of the large number of features investigated, we've shown that none of them have predictive power when we normalized the amplitudes of our sound samples to fall in the same range. Although we have only ruled out their usefulness in predicting sound textures, it seems unlikely that they will be generally useful in other types of audio classification. Further, this negative result has implications in the understanding of sound textures and human audition. It suggests that one informal conjecture about the nature of sound textures is incorrect. This will hopefully spur a refinement of ideas and definitions surrounding sound textures and provide a useful piece of evidence when considering how to move forward. One might now believe the decision to throw away temporal information about an audio signal to be more nuanced than previously thought and hopefully further work on features such as temporal coincidence, reverberation, natural harmonics, and temporal regularity will now be increasingly motivated.
 
